--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/storybook": "^4.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
+    "@nuxtjs/svg": "^0.1.12",
     "@nuxtjs/tailwindcss": "^4.0.1",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
