--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     }
   },
   "dependencies": {
+    "@nuxtjs/firebase": "^7.5.0",
     "core-js": "^3.11.1",
+    "firebase": "^8.4.3",
     "nuxt": "^2.15.3"
   },
   "devDependencies": {
