--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nuxtjs/color-mode": "^2.0.5",
     "@nuxtjs/eslint-config": "^6.0.0",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/storybook": "^4.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "@nuxtjs/svg": "^0.1.12",
