--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@nuxtjs/firebase": "^7.5.0",
+    "@nuxtjs/toast": "^3.3.1",
     "core-js": "^3.12.1",
     "firebase": "^8.6.1",
     "nuxt": "^2.15.6"
